Beginning of HTTPUrlConnection video